--- a/fundamentals/great_number_game/templates/index.html
+++ b/fundamentals/great_number_game/templates/index.html
@@ -8,13 +8,19 @@
     <link rel="stylesheet" href="{{url_for('static', filename='style.css') }}">
 </head>
 <body>
+
     <h2>Welcome to the Great Number Game!</h2>
     <h3>I am thinking of a number between <span>1</span> and <span>100</span></h3>
-    <h3>Take a guess! </h3>
-    <h3><span class="hidden">Here is it, you CHEATER! -> {{session["nr"]}} <-</span></h3>
-    <form action="">
-        <input type="number">
-        <input type="button" value="submit">
+    <h3>Take a guess! </h3> 
+
+    <form action="/guess" method="post">
+        <input class="input" type="number" name="nr" max="100" min="1">
+        <input class="myGuess" type="submit">
     </form>
+    <form action="reset">
+        <input class="again" type="submit" value="Try again">
+    </form>
+    <p>answer is {{ answer }}</p> 
+    <span class="hidden">Here is it, you CHEATER! -> {{session['nr']}} </span>
 </body>
 </html>
